name:                bug
version:             0.1.0.0
license:             BSD3
author:              Tom Smalley
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bug
  build-depends:       base
                     , ghcjs-dom
                     , jsaddle
                     , reflex
                     , reflex-dom-core
                     , text
  default-language:    Haskell2010

executable bug-exe
  hs-source-dirs:     .
  main-is:            Main.hs
  build-depends:      base
                    , bug
                    , jsaddle-warp

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  if impl(ghcjs)
    ghc-options: -dedupe
  default-language:    Haskell2010

